--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="cse535.mobilecomputing.assignment2">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +12,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+        <uses-feature
+            android:name="android.hardware.sensor.accelerometer"
+            android:required="true" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -25,9 +26,9 @@
 
         <service
             android:name=".AccelerometerService"
-            android:label="AccService"
-            >
-        </service>
+            android:label="AccService"></service>
+
+        <activity android:name=".DownloadDatabaseActivity"></activity>
     </application>
 
 </manifest>
